crates/biome_cli/tests/snapshots/main_cases_regression_tests/configuration_malformed_lint.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.jsonc`

```json
{
           "foo"
        }
```

## `test.js`

```js
// foo
'use strict';
console.log('test');

```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Biome exited because the configuration resulted in errors. Please fix them.
  


```

# Emitted Messages

```block
biome.jsonc:3:9 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `:` but instead found `}`
  
    1 │ {
    2 │            "foo"
  > 3 │         }
      │         ^
  
  i Remove }
  

```
