crates/biome_cli/tests/snapshots/main_cases_regression_tests/issue_10885.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check '<TEMP_DIR>/issue_10885' --formatter-enabled=false
```

# Emitted Messages

```block
Checked 3 files in <TIME>. No fixes applied.
```
