crates/biome_cli/tests/snapshots/main_cases_regression_tests/issue_6427.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check test.js
```

## `biome.json`

```json
{
  "plugins": ["noDirectReactComponentCall.grit"],
  "formatter": {
    "enabled": false
  }
}
```

## `noDirectReactComponentCall.grit`

```grit
language js

call_expression(function=$f) where {
    $f <: r"[A-Z].*",
    register_diagnostic(
        span = $f,
        message = "Don't call React Components directly"
    )
}

```

## `test.js`

```js
Component();
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js:1:1 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Don't call React Components directly
  
  > 1 │ Component();
      │ ^^^^^^^^^
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
