crates/biome_cli/tests/snapshots/main_cases_regression_tests/issue_6782.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint main.tsx
```

## `biome.json`

```json
{
  "plugins": ["fragment.grit"],
  "linter": {
    "rules": {
      "recommended": false
    }
  }
}
```

## `fragment.grit`

```grit
`<$component $attrs>$children</$component>` as $fragment where {
    $component <: `React.Fragment`,
    register_diagnostic(span=$fragment, message=`Prefer importing <Fragment /> instead of relying on auto import ($component)`)
}

```

## `main.tsx`

```tsx
const Component = () => {
  return <React.Fragment>
    <div>Hello</div>
    <span>World</span>
  </React.Fragment>
}

export default Component

const keyed = <React.Fragment key="item"><span>Child</span></React.Fragment>;
const empty = <React.Fragment></React.Fragment>;
const other = <Other.Fragment><span>Child</span></Other.Fragment>;
const suspense = <React.Suspense><span>Child</span></React.Suspense>;
const imported = <Fragment><span>Child</span></Fragment>;

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
biome.json:3:15 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
    1 │ {
    2 │     "plugins": ["fragment.grit"],
  > 3 │     "linter": {
      │               ^
  > 4 │         "rules": {
  > 5 │             "recommended": false
  > 6 │         }
  > 7 │     }
      │     ^
    8 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
main.tsx:2:10 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Prefer importing <Fragment /> instead of relying on auto import (React.Fragment)
  
    1 │ const Component = () => {
  > 2 │   return <React.Fragment>
      │          ^^^^^^^^^^^^^^^^
  > 3 │     <div>Hello</div>
  > 4 │     <span>World</span>
  > 5 │   </React.Fragment>
      │   ^^^^^^^^^^^^^^^^^
    6 │ }
    7 │ 
  

```

```block
main.tsx:10:15 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Prefer importing <Fragment /> instead of relying on auto import (React.Fragment)
  
     8 │ export default Component
     9 │ 
  > 10 │ const keyed = <React.Fragment key="item"><span>Child</span></React.Fragment>;
       │               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    11 │ const empty = <React.Fragment></React.Fragment>;
    12 │ const other = <Other.Fragment><span>Child</span></Other.Fragment>;
  

```

```block
main.tsx:11:15 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Prefer importing <Fragment /> instead of relying on auto import (React.Fragment)
  
    10 │ const keyed = <React.Fragment key="item"><span>Child</span></React.Fragment>;
  > 11 │ const empty = <React.Fragment></React.Fragment>;
       │               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    12 │ const other = <Other.Fragment><span>Child</span></Other.Fragment>;
    13 │ const suspense = <React.Suspense><span>Child</span></React.Suspense>;
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 3 errors.
```
