crates/biome_cli/tests/snapshots/main_cases_regression_tests/issue_7363.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check interface.ts
```

## `biome.json`

```json
{
  "plugins": ["interface.grit"],
  "formatter": {
    "enabled": false
  },
  "linter": {
    "rules": {
      "recommended": false
    }
  }
}
```

## `interface.grit`

```grit
`interface $name { $body }` where {
    register_diagnostic(span=$name, severity="warn", message="found interface")
}

```

## `interface.ts`

```ts
interface Zero {}

interface Single {
    f1: string;
}

interface Multi {
    id: number;
    name: string;
    email: string;
}

```

# Emitted Messages

```block
biome.json:6:15 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
     4 │         "enabled": false
     5 │     },
   > 6 │     "linter": {
       │               ^
   > 7 │         "rules": {
   > 8 │             "recommended": false
   > 9 │         }
  > 10 │     }
       │     ^
    11 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
interface.ts:1:11 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! found interface
  
  > 1 │ interface Zero {}
      │           ^^^^
    2 │ 
    3 │ interface Single {
  

```

```block
interface.ts:3:11 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! found interface
  
    1 │ interface Zero {}
    2 │ 
  > 3 │ interface Single {
      │           ^^^^^^
    4 │     f1: string;
    5 │ }
  

```

```block
interface.ts:7:11 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! found interface
  
    5 │ }
    6 │ 
  > 7 │ interface Multi {
      │           ^^^^^
    8 │     id: number;
    9 │     name: string;
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 3 warnings.
```
