crates/biome_cli/tests/snapshots/main_cases_regression_tests/issue_9180.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write test.js
```

## `test.js`

```js
// foo

console.log("test");

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
